# baurinum

./: .clangd  .gitignore  .inferconfig  CMakeLists.txt  Makefile  README.md  baurinum.c  baurinum.h  main.c
c/: .clang-format  .gitignore  README.md  compile_commands.json  main.c
c/lib/: absneg.c  setter.c
docs/: README.md
lib/: absneg.c  addsub.c  baurinum.c  baurinum.h  compare.c  getter.c  setter.c  utility.c
tests/: helper.h  main.c  test.c
